.. This file should contain the changes for the last release only, which
   will be included on the package's page on pypi. All older entries are
   kept in HISTORY.txt

Changelog
=========

4.0b2 - Unreleased
------------------

- Make prefs_main_template fill portlets_one_slot instead of column_one_slot
  to add its portlet, for compatibility with Sunburst.
  [davisagli]

- Adjusted viewlet configuration so that the Sunburst theme uses the viewlets
  defined in plone.app.layout, and the Classic theme overrides that
  configuration to achieve the old viewlet positions.
  [davisagli]

- batch_macros.pt: Use request/ACTUAL_URL instead of context/absolute_url as
  batching base url so that batching works for diffent views and FSPageTemplates
  appended to context/absolute_url.
  The approach ${context/absolute_url}/${template/getId} didn't work for views.
  [thet]

- Fix columns in prefs_main_template.
  [davisagli]

- Use zope.app.locales >= 3.6.0, this package have now a configure.zcml
  which register the translations, we use it now.
  A new version of zope.app.locales is needed to fix
  http://dev.plone.org/plone/ticket/10105
  [vincentfretin]

- Fix argument order in translate Python script.
  [davisagli]

- Simplify folder_tabular_view to use the folder_listing macros.
  [elro]

- folder_listing should batch for collections, like folder_tabular_view.
  This was introduced to fix #7937 but it no longer seems to be a problem.
  [elro]

- Simplified the "Event when" i18n introduced in 4.0b1.
  [vincentfretin]

- Fixed DYNAMIC_CONTENT in heading_prefs_user_details message.
  [vincentfretin]

- Updated the table_sorter.js to use Unicode for its arrows instead of images.
  Also made it more robust, so it doesn't fail if you have two columns with
  the same name. This refs http://dev.plone.org/plone/ticket/10352
  [davisagli, limi]

- Stop removing the $ alias for jQuery, since many plugins rely on it. Users
  worried about conflicts with other libraries can customize